--- a/KhanhDuy1.html
+++ b/KhanhDuy1.html
@@ -9,9 +9,9 @@
     <style>
         #chart {
             margin: auto;
-            /* Căn giữa biểu đồ */
+            /* Center the chart */
             text-align: center;
-            /* Căn giữa nội dung trong thẻ div */
+            /* Center the content within the div */
         }
     </style>
 </head>
@@ -23,17 +23,17 @@
     <script>
         d3.csv("Traffic_Accidents.csv").then(function (data) {
             var countData = countInjuriesByIllumination(data);
-            // Sắp xếp countData theo số lượng giảm dần
+            // Sort countData in descending order
             countData.sort(function (a, b) {
                 return b.count - a.count;
             });
 
-            // Thiết lập kích thước của biểu đồ
+            // Set the dimensions of the chart
             var width = 700;
             var height = 400;
             var margin = { top: 20, right: 20, bottom: 90, left: 70 };
 
-            // Tạo một đối tượng SVG và thiết lập kích thước
+            // Create an SVG element and set the dimensions
             var svg = d3.select("#chart")
                 .append("svg")
                 .attr("width", width + margin.left + margin.right)
@@ -41,7 +41,7 @@
                 .append("g")
                 .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-            // Thiết lập scale cho trục x và y
+            // Set up scales for the x and y axes
             var x = d3.scaleBand()
                 .domain(countData.map(function (d) { return d.illumination; }))
                 .range([0, width])
@@ -52,7 +52,7 @@
                 .nice()
                 .range([height, 0]);
 
-            // Tạo trục x và y
+            // Create x and y axes
             svg.append("g")
                 .attr("transform", "translate(0," + height + ")")
                 .call(d3.axisBottom(x))
@@ -65,7 +65,7 @@
             svg.append("g")
                 .call(d3.axisLeft(y));
 
-            // Vẽ các cột
+            // Draw bars
             svg.selectAll(".bar")
                 .data(countData)
                 .enter().append("rect")
@@ -76,19 +76,19 @@
                 .attr("height", function (d) { return height - y(d.count); })
                 .attr("fill", "#69b3a2");
 
-            // Thêm label phía trên của mỗi cột
+            // Add labels on top of each bar
             svg.selectAll(".text")
                 .data(countData)
                 .enter().append("text")
                 .attr("class", "label")
                 .attr("x", function (d) { return x(d.illumination) + x.bandwidth() / 2; })
-                .attr("y", function (d) { return y(d.count) - 5; }) // Dịch lên một chút để tránh chồng chéo
+                .attr("y", function (d) { return y(d.count) - 5; }) // Shift up a bit to avoid overlap
                 .text(function (d) { return d.count; })
                 .attr("text-anchor", "middle")
                 .attr("font-size", "12px")
                 .attr("fill", "black");
 
-            // Thêm tên cho trục x
+            // Add label for x-axis
             svg.append("text")
                 .attr("transform", "translate(" + (width / 2) + " ," + (height + margin.top + 40) + ")")
                 .style("text-anchor", "middle")
@@ -96,7 +96,7 @@
                 .style("font-weight", "bold")
                 .text("Loại chiếu sáng");
 
-            // Thêm tên cho trục y
+            // Add label for y-axis
             svg.append("text")
                 .attr("transform", "rotate(-90)")
                 .attr("y", 0 - margin.left)
@@ -112,21 +112,21 @@
         function countInjuriesByIllumination(data) {
             var injuriesCounts = {};
 
-            // Lặp qua mảng dữ liệu và tính số lượng tai nạn không xảy ra va chạm cho mỗi loại Illumination Description
+            // Loop through the data array and count injuries for each Illumination Description
             data.forEach(function (d) {
                 var illumination = d["Illumination Description"];
-                var numberInjuries = d["Number of Injuries"]; // Chỉnh sửa tên trường dữ liệu
+                var numberInjuries = d["Number of Injuries"]; // Adjust the data field name
                 if (numberInjuries > 0) {
                     if (!injuriesCounts[illumination]) {
                         injuriesCounts[illumination] = 0;
                     }
-                    injuriesCounts[illumination]++;
+                    injuriesCounts[illumination] += parseInt(numberInjuries);
                 }
             });
 
-            // Chuyển đổi đối tượng thành mảng các đối tượng
-            var countData = Object.keys(injuriesCounts).map(function (key) { // Sửa tên biến
-                return { illumination: key, count: injuriesCounts[key] }; // Sửa tên biến
+            // Convert the object to an array of objects
+            var countData = Object.keys(injuriesCounts).map(function (key) { // Adjust variable names
+                return { illumination: key, count: injuriesCounts[key] }; // Adjust variable names
             });
 
             return countData;
