fix khanh linh 2

--- a/KhanhLinhD3/KhanhLinh2.html
+++ b/KhanhLinhD3/KhanhLinh2.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1 style="text-align: center;">Biểu đồ báo cáo số lượng người bị thương với từng loại va chạm</h1>
+    <h1 style="text-align: center;">Biểu đồ tác phẩm điêu khắc theo từng chất liệu</h1>
     <div id="chart"></div>
     <script>
 d3.csv("Art_in_Public_Places.csv").then(function(data) {
