--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             <div class="grid-item HD" onclick="redirectTo('/HoangDuyD3/index.html')">
                 <h2>Hoàng Duy</h2>
             </div>
+            <div class="grid-item TD" onclick="redirectTo('/ThuyDuongD3/index.html')">
+                <h2>Thùy Dương</h2>
+            </div>
         </div>
     </div>
 </body>
