--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <div class="grid-item TD" onclick="redirectTo('/ThuyDuongD3/index.html')">
                 <h2>Thùy Dương</h2>
             </div>
+            <div class="grid-item TD" onclick="redirectTo('/YNhiD3/index.html')">
+                <h2>Yến Nhi</h2>
+            </div>
         </div>
     </div>
 </body>
