--- a/KhanhDuyD3/index.html
+++ b/KhanhDuyD3/index.html
@@ -4,267 +4,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Combined Charts</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <title>Trực Quan Hóa Dữ Liệu</title>
     <style>
-        .chart-container {
-            margin: 50px auto;
-            text-align: center;
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 0;
         }
 
-        .chart {
-            margin: auto;
-            text-align: center;
+        #container {
+            max-width: 800px;
+            margin: 50px auto;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
         }
 
         h1 {
-            margin: auto;
             text-align: center;
+            color: #333;
+            font-size: 36px;
+            margin-bottom: 30px;
+        }
+
+        h2 {
+            color: #555;
+            font-size: 24px;
+        }
+
+        h3 {
+            color: #888;
+            font-size: 16px;
+            margin-top: 20px;
+            text-align: center;
+            /* Điều chỉnh để căn giữa */
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #007bff;
+            font-weight: bold;
+            font-size: 18px;
+            transition: color 0.3s;
+        }
+
+        a:hover {
+            color: #0056b3;
+        }
+
+        .question-list {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
     </style>
 </head>
 
 <body>
-    <h1>Đồ án cuối kỳ thực hành</h1>
-    <h1>Đỗ Hoàng Khánh Duy - 21127601</h1>
-    <div class="chart-container">
-        <h1>Biểu đồ số lượng chấn thương theo điều kiện ánh sáng</h1>
-        <div id="chart1" class="chart"></div>
+    <div id="container">
+        <h1>THỰC HÀNH TRỰC QUAN HÓA DỮ LIỆU</h1>
+        <h3>Đỗ Hoàng Khánh Duy - 21127601</h3>
+        <div class="question-list">
+            <h2>Lựa chọn biểu đồ trực quan:</h2>
+            <ul>
+                <li><a href="KhanhDuy1.html">1. Báo cáo số lượng chấn thương theo điều kiện ánh sáng</a></li>
+                <li><a href="KhanhDuy2.html">2. Báo cáo số lượng tai nạn Hit and Run theo thời tiết</a></li>
+            </ul>
+        </div>
     </div>
-
-    <div class="chart-container">
-        <h1>Biểu đồ số lượng tai nạn Hit and Run theo thời tiết</h1>
-        <div id="chart2" class="chart"></div>
-    </div>
-
-    <script>
-        // Code for the first chart
-        d3.csv("Traffic_Accidents.csv").then(function (data) {
-            var countData = countInjuriesByIllumination(data);
-            // Sort countData in descending order
-            countData.sort(function (a, b) {
-                return b.count - a.count;
-            });
-
-            // Set the dimensions of the chart
-            var width = 700;
-            var height = 400;
-            var margin = { top: 20, right: 20, bottom: 90, left: 70 };
-
-            // Create an SVG element and set the dimensions
-            var svg = d3.select("#chart1")
-                .append("svg")
-                .attr("width", width + margin.left + margin.right)
-                .attr("height", height + margin.top + margin.bottom)
-                .append("g")
-                .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-            // Set up scales for the x and y axes
-            var x = d3.scaleBand()
-                .domain(countData.map(function (d) { return d.illumination; }))
-                .range([0, width])
-                .padding(0.1);
-
-            var y = d3.scaleLinear()
-                .domain([0, d3.max(countData, function (d) { return d.count; })])
-                .nice()
-                .range([height, 0]);
-
-            // Create x and y axes
-            svg.append("g")
-                .attr("transform", "translate(0," + height + ")")
-                .call(d3.axisBottom(x))
-                .selectAll("text")
-                .style("text-anchor", "end")
-                .attr("dx", "-.8em")
-                .attr("dy", "-.55em")
-                .attr("transform", "rotate(-90)");
-
-            svg.append("g")
-                .call(d3.axisLeft(y));
-
-            // Draw bars
-            svg.selectAll(".bar")
-                .data(countData)
-                .enter().append("rect")
-                .attr("class", "bar")
-                .attr("x", function (d) { return x(d.illumination); })
-                .attr("y", function (d) { return y(d.count); })
-                .attr("width", x.bandwidth())
-                .attr("height", function (d) { return height - y(d.count); })
-                .attr("fill", "#69b3a2");
-
-            // Add labels on top of each bar
-            svg.selectAll(".text")
-                .data(countData)
-                .enter().append("text")
-                .attr("class", "label")
-                .attr("x", function (d) { return x(d.illumination) + x.bandwidth() / 2; })
-                .attr("y", function (d) { return y(d.count) - 5; }) // Shift up a bit to avoid overlap
-                .text(function (d) { return d.count; })
-                .attr("text-anchor", "middle")
-                .attr("font-size", "12px")
-                .attr("fill", "black");
-
-            // Add label for x-axis
-            svg.append("text")
-                .attr("transform", "translate(" + (width / 2) + " ," + (height + margin.top + 40) + ")")
-                .style("text-anchor", "middle")
-                .style("color", "red")
-                .style("font-weight", "bold")
-                .text("Loại chiếu sáng");
-
-            // Add label for y-axis
-            svg.append("text")
-                .attr("transform", "rotate(-90)")
-                .attr("y", 0 - margin.left)
-                .attr("x", 0 - (height / 2))
-                .attr("dy", "1em")
-                .style("text-anchor", "middle")
-                .style("font-weight", "bold")
-                .text("Số lượng chấn thương khi xảy ra va chạm");
-        }).catch(function (error) {
-            console.error("Error loading the data: " + error);
-        });
-
-        function countInjuriesByIllumination(data) {
-            var injuriesCounts = {};
-
-            // Loop through the data array and count injuries for each Illumination Description
-            data.forEach(function (d) {
-                var illumination = d["Illumination Description"];
-                var numberInjuries = d["Number of Injuries"]; // Adjust the data field name
-                if (numberInjuries > 0) {
-                    if (!injuriesCounts[illumination]) {
-                        injuriesCounts[illumination] = 0;
-                    }
-                    injuriesCounts[illumination] += parseInt(numberInjuries);
-                }
-            });
-
-            // Convert the object to an array of objects
-            var countData = Object.keys(injuriesCounts).map(function (key) { // Adjust variable names
-                return { illumination: key, count: injuriesCounts[key] }; // Adjust variable names
-            });
-
-            return countData;
-        }
-
-        // Code for the second chart
-        d3.csv("Traffic_Accidents.csv").then(function (data) {
-            var countData = countAccidentsByWeather(data);
-            // Sắp xếp countData theo số lượng giảm dần
-            countData.sort(function (a, b) {
-                return b.count - a.count;
-            });
-
-            // Thiết lập kích thước của biểu đồ
-            var width = 700;
-            var height = 400;
-            var margin = { top: 20, right: 20, bottom: 90, left: 70 };
-
-            // Tạo một đối tượng SVG và thiết lập kích thước
-            var svg = d3.select("#chart2")
-                .append("svg")
-                .attr("width", width + margin.left + margin.right)
-                .attr("height", height + margin.top + margin.bottom)
-                .append("g")
-                .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-            // Thiết lập scale cho trục x và y
-            var x = d3.scaleBand()
-                .domain(countData.map(function (d) { return d.weather; }))
-                .range([0, width])
-                .padding(0.1);
-
-            var y = d3.scaleLinear()
-                .domain([0, d3.max(countData, function (d) { return d.count; })])
-                .nice()
-                .range([height, 0]);
-
-            // Tạo trục x và y
-            svg.append("g")
-                .attr("transform", "translate(0," + height + ")")
-                .call(d3.axisBottom(x))
-                .selectAll("text")
-                .style("text-anchor", "end")
-                .attr("dx", "-.8em")
-                .attr("dy", "-.55em")
-                .attr("transform", "rotate(-90)");
-
-            svg.append("g")
-                .call(d3.axisLeft(y));
-
-            // Vẽ các cột
-            svg.selectAll(".bar")
-                .data(countData)
-                .enter().append("rect")
-                .attr("class", "bar")
-                .attr("x", function (d) { return x(d.weather); })
-                .attr("y", function (d) { return y(d.count); })
-                .attr("width", x.bandwidth())
-                .attr("height", function (d) { return height - y(d.count); })
-                .attr("fill", "#69b3a2");
-
-            // Thêm label phía trên của mỗi cột
-            svg.selectAll(".text")
-                .data(countData)
-                .enter().append("text")
-                .attr("class", "label")
-                .attr("x", function (d) { return x(d.weather) + x.bandwidth() / 2; })
-                .attr("y", function (d) { return y(d.count) - 5; }) // Dịch lên một chút để tránh chồng chéo
-                .text(function (d) { return d.count; })
-                .attr("text-anchor", "middle")
-                .attr("font-size", "12px")
-                .attr("fill", "black");
-
-            // Thêm tên cho trục x
-            svg.append("text")
-                .attr("transform", "translate(" + (width / 2) + " ," + (height + margin.top + 60) + ")")
-                .style("text-anchor", "middle")
-                .style("color", "red")
-                .style("font-weight", "bold")
-                .text("Phường");
-
-            // Thêm tên cho trục y
-            svg.append("text")
-                .attr("transform", "rotate(-90)")
-                .attr("y", 0 - margin.left)
-                .attr("x", 0 - (height / 2))
-                .attr("dy", "1em")
-                .style("text-anchor", "middle")
-                .style("font-weight", "bold")
-                .text("Số lượng tai nạn Hit and Run");
-        }).catch(function (error) {
-            console.error("Error loading the data: " + error);
-        });
-
-        function countAccidentsByWeather(data) {
-            var HitAndRunCounts = {};
-
-            // Lặp qua mảng dữ liệu và tính số lượng tai nạn Hit and Run cho mỗi phường
-            data.forEach(function (d) {
-                var Weather = d["Weather Description"];
-                var isHitAndRun = d["Hit and Run"];
-
-                // Kiểm tra nếu là tai nạn Hit and Run
-                if (isHitAndRun === "TRUE") {
-                    if (HitAndRunCounts[Weather]) {
-                        HitAndRunCounts[Weather]++;
-                    } else {
-                        HitAndRunCounts[Weather] = 1;
-                    }
-                }
-            });
-
-            // Chuyển đổi đối tượng thành mảng các đối tượng
-            var countData = Object.keys(HitAndRunCounts).map(function (key) {
-                return { weather: key, count: HitAndRunCounts[key] };
-            });
-
-            return countData;
-        }
-    </script>
 </body>
 
 </html>
