--- a/ThuyDuongD3/index.html
+++ b/ThuyDuongD3/index.html
@@ -1,47 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thuy Duong</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="task-1-wrapper">
 
-        <div id="chart-container-task1">
-            <div class="review1">
-                <p><b>Yêu cầu:</b> Tìm top 3 nghệ sĩ có nhiều tác phẩm thuộc loại Scuplture nhất</p>
-                <p><b>Thiết kế biểu đồ:</b></p>
-                <p>Với yêu cầu này, ta sử dụng 3 thuộc tính là Artist
-                    Last, Artist First - để xác định tên của nghệ sĩ, và CNT(Type) để đếm số
-                    lượng các tác phẩm thuộc loại Sculpture.</p>
-                <p>Ta sẽ sử dụng các kênh sau:</p>
-                <p>- Vị trí theo chiều dọc: thuộc tính số lượng các tác phẩm</p>
-                <p>- Vị trí theo chiều ngang: thuộc tính tên nghệ sĩ</p>
-                <p>- Màu sắc để tăng hiệu quả biểu đạt.</p>
-                <p><b>Đánh giá biểu đồ: </b></p>
-            </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trực Quan Hóa Dữ Liệu</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 0;
+        }
+
+        #container {
+            max-width: 800px;
+            margin: 50px auto;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+            font-size: 36px;
+            margin-bottom: 30px;
+        }
+
+        h2 {
+            color: #555;
+            font-size: 24px;
+        }
+
+        h3 {
+            color: #888;
+            font-size: 16px;
+            margin-top: 20px;
+            text-align: center;
+            /* Điều chỉnh để căn giữa */
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #007bff;
+            font-weight: bold;
+            font-size: 18px;
+            transition: color 0.3s;
+        }
+
+        a:hover {
+            color: #0056b3;
+        }
+
+        .question-list {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="container">
+        <h1>THỰC HÀNH TRỰC QUAN HÓA DỮ LIỆU</h1>
+        <h3>Đinh Thị Thùy Dương - 21127572</h3>
+        <div class="question-list">
+            <h2>Lựa chọn biểu đồ trực quan:</h2>
+            <ul>
+                <li><a href="ThuyDuong1.html">1. Tìm top 3 nghệ sĩ có nhiều tác phẩm thuộc loại Sculpture nhất</a></li>
+                <li><a href="ThuyDuong2.html">2. Báo cáo số lượng tai nạn không xảy ra va chạm theo từng loại thông tin
+                        chiếu sáng</a></li>
+            </ul>
         </div>
     </div>
+</body>
 
-    <div class="task-2-wrapper">
-        <div id="chart-container-task2"></div>
-        <div class="review2">
-            <p><b>Yêu cầu:</b> Báo cáo số lượng tai nạn không xảy ra va chạm theo từng loại thông tin chiếu sáng</p>
-            <p><b>Thiết kế biểu đồ:</b></p>
-            <p>Với yêu cầu này, ta sử dụng 2 thuộc tính là Illumination Description - để xác định kiểu chiếu sáng, và CNT(Collision Type Description) 
-                để đếm số lượng các vụ tai nạn mà có va chạm thuộc loại NOT COLLISION W/MOTOR VEHICLE-TRANSPORT.</p>
-            <p>Ta sẽ sử dụng các kênh sau:</p>
-            <p>- Vị trí theo chiều dọc: thuộc tính số lượng các vụ tai nạn không xảy ra va chạm</p>
-            <p>- Vị trí theo chiều ngang: thuộc tính loại chiếu sáng</p>
-            <p>- Màu sắc để tăng hiệu quả biểu đạt.</p>
-            <p><b>Đánh giá biểu đồ: </b></p>
-        </div>
-    </div>
-
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="TD_Task1.js"></script>
-    <script src="TD_Task2.js"></script>
-  </body>
 </html>
