feat: Bo sung comment bieu do

--- a/ThuyDuongD3/ThuyDuong1.html
+++ b/ThuyDuongD3/ThuyDuong1.html
@@ -24,6 +24,10 @@
                 <p>- Vị trí theo chiều ngang: thuộc tính tên nghệ sĩ</p>
                 <p>- Màu sắc để tăng hiệu quả biểu đạt.</p>
                 <p><b>Đánh giá biểu đồ: </b></p>
+                <p>- Biểu đồ cột minh họa 3 nghệ sĩ sở hữu nhiều tác phẩm thuộc loại Sculpture nhất.</p>
+                <p>- Thông qua biểu đồ, chúng ta có thể nhận thấy rằng Faxon Russell là nghệ sĩ dẫn đầu với 10 tác phẩm Sculpture, theo sau đó là LeQuire Alan với 7 tác phẩm, và cuối cùng là
+                    nghệ sĩ Mims Puryear với số tác phẩm Sculpture là 5. Với các thông tin được cung cấp từ biểu đồ, ta có thể sử dụng những thông tin đó để tôn vinh và ghi nhận sở thích sáng tác
+                    và công lao của các nghệ sĩ trong lĩnh vực nghệ thuật.</p>
             </div>
         </div>
     </div>
