--- a/ThuyDuongD3/ThuyDuong2.html
+++ b/ThuyDuongD3/ThuyDuong2.html
@@ -25,9 +25,14 @@
             <p>- Vị trí theo chiều ngang: thuộc tính loại chiếu sáng</p>
             <p>- Màu sắc để tăng hiệu quả biểu đạt.</p>
             <p><b>Đánh giá biểu đồ: </b></p>
+            <p>- Biểu đồ cột minh họa số lượng tai nạn mà không có va chạm theo từng loại thông tin chiếu sáng, cung cấp cái nhìn tổng quan 
+                 về tình hình an toàn giao thông với các kiểu chiếu sáng khác nhau.</p>
+            <p>- Thông qua biểu đồ, chúng ta có thể nhận thấy rằng một số loại chiếu sáng sẽ ít gây ra các vụ tai nạn có va chạm lẫn nhau 
+                 so với các loại chiếu sáng khác. Các trường hợp ánh sáng như DAYLIGHT và DARK-LIGHTED có số lượng tai nạn NOT COLLISION W/MOTOR VEHICLE-TRANSPORT
+                 nhiều nhất, trong đó DAYLIGHT dẫn đầu với 19272 vụ tai nạn không xảy ra do va chạm, cao hơn xấp xỉ 2 lần vị trí thứ 2 là DARK-LIGHTED. Do vậy,
+                 ở các trường hợp độ sáng còn lại, nên được tập trung vào việc hỗ trợ ánh sáng để cải thiện an toàn giao thông.</p>
         </div>
     </div>
     <script src="TD_Task2.js"></script>
 </body>
-
 </html>
