Thay doi Task2 TD

--- a/ThuyDuongD3/ThuyDuong2.html
+++ b/ThuyDuongD3/ThuyDuong2.html
@@ -15,22 +15,21 @@
     <div class="task-2-wrapper">
         <div id="chart-container-task2"></div>
         <div class="review2">
-            <p><b>Yêu cầu:</b> Báo cáo số lượng tai nạn không xảy ra va chạm theo từng loại thông tin chiếu sáng</p>
+            <p><b>Yêu cầu:</b> Báo cáo số lượng tai nạn theo điều kiện ánh sáng trong năm 2020 và 2021</p>
             <p><b>Thiết kế biểu đồ:</b></p>
             <p>Với yêu cầu này, ta sử dụng 2 thuộc tính là Illumination Description - để xác định kiểu chiếu sáng, và
-                CNT(Collision Type Description)
-                để đếm số lượng các vụ tai nạn mà có va chạm thuộc loại NOT COLLISION W/MOTOR VEHICLE-TRANSPORT.</p>
+                Date để đếm số lượng các vụ tai nạn mà có năm thuộc vào năm 2020 hoặc 2021.</p>
             <p>Ta sẽ sử dụng các kênh sau:</p>
-            <p>- Vị trí theo chiều dọc: thuộc tính số lượng các vụ tai nạn không xảy ra va chạm</p>
-            <p>- Vị trí theo chiều ngang: thuộc tính loại chiếu sáng</p>
+            <p>- Vị trí theo chiều dọc: thuộc tính số lượng các vụ tai nạn trong năm 2020 và 2021</p>
+            <p>- Vị trí theo chiều ngang: thuộc tính điều kiện ánh sáng</p>
             <p>- Màu sắc để tăng hiệu quả biểu đạt.</p>
             <p><b>Đánh giá biểu đồ: </b></p>
-            <p>- Biểu đồ cột minh họa số lượng tai nạn mà không có va chạm theo từng loại thông tin chiếu sáng, cung cấp cái nhìn tổng quan 
-                 về tình hình an toàn giao thông với các kiểu chiếu sáng khác nhau.</p>
-            <p>- Thông qua biểu đồ, chúng ta có thể nhận thấy rằng một số loại chiếu sáng sẽ ít gây ra các vụ tai nạn có va chạm lẫn nhau 
-                 so với các loại chiếu sáng khác. Các trường hợp ánh sáng như DAYLIGHT và DARK-LIGHTED có số lượng tai nạn NOT COLLISION W/MOTOR VEHICLE-TRANSPORT
-                 nhiều nhất, trong đó DAYLIGHT dẫn đầu với 19272 vụ tai nạn không xảy ra do va chạm, cao hơn xấp xỉ 2 lần vị trí thứ 2 là DARK-LIGHTED. Do vậy,
-                 ở các trường hợp độ sáng còn lại, nên được tập trung vào việc hỗ trợ ánh sáng để cải thiện an toàn giao thông.</p>
+            <p>- Biểu đồ cột chồng minh họa số lượng tai nạn trong năm 2020 và 2021 theo từng điều kiện ánh sáng, giúp cung cấp cái nhìn tổng quan 
+                 về tình hình an toàn giao thông đối với các mỗi điều kiện ánh sáng khác nhau.</p>
+            <p>- Thông qua biểu đồ, chúng ta có thể nhận thấy rằng trong cả 2 năm 2020 và 20221, số lượng các vụ tai nạn xảy ra nhiều nhất khi điều kiện ánh sáng là DAYLIGHT, 
+                với năm 2020 là 13589, và 2021 là 12167. </p>
+            <p> Theo sau là DARK-LIGHTED có số lượng tai nạn ít hơn gần 3 lần, lần lượt là 4931 (năm 2020) và 4339 vụ (năm 2021).</p>
+            </p>Do vậy, ở các điều kiện ánh sáng này, nên được chú ý để có những biện pháp nhằm cải thiện an toàn giao thông.</p>
         </div>
     </div>
     <script src="TD_Task2.js"></script>
