--- a/KhanhDuyD3/index.html
+++ b/KhanhDuyD3/index.html
@@ -80,7 +80,8 @@
             <h2>Lựa chọn biểu đồ trực quan:</h2>
             <ul>
                 <li><a href="KhanhDuy1.html">1. Báo cáo số lượng chấn thương theo điều kiện ánh sáng</a></li>
-                <li><a href="KhanhDuy2.html">2. Báo cáo số lượng tai nạn Hit and Run theo thời tiết</a></li>
+                <li><a href="KhanhDuy2.html">2. Báo cáo số lượng tai nạn Hit and Run qua từng tháng trong năm 2020</a>
+                </li>
             </ul>
         </div>
     </div>
